# piloting-mavsdk-ros

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  package.xml
config/: mavsdk_ros_config.yaml
include/mavsdk_ros/: mavsdk_include.h  mavsdk_ros_node.h  parameters.h
launch/: mavsdk_ros.launch
msg/: AlarmItem.msg  AlarmStatus.msg  CommandAck.msg  CommandLong.msg  HLActionItem.msg  InspectionItem.msg  InspectionPlan.msg  TextStatus.msg  WaypointItem.msg  WaypointList.msg  WaypointsAck.msg
src/: main.cpp  mavsdk_ros_node.cpp  mavsdk_ros_node_publisher.cpp  mavsdk_ros_node_services.cpp  mavsdk_ros_node_subscriber.cpp  parameters.cpp
srv/: Command.srv  DownloadInspection.srv  InspectionPlan.srv  SetUploadAlarm.srv  SetUploadChecklist.srv  SetUploadHLAction.srv  SetUploadInspection.srv  SetUploadWaypointList.srv  UpdateSeqInspectionItem.srv  UploadAlarm.srv  UploadChecklist.srv  UploadHLAction.srv  UploadInspection.srv
